# unitree_legged_sdk

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
include/unitree_legged_sdk/: comm.h
scripts/: Go1.py  Robot_Python.py  Unitree_Go1_Python_sdk.py  Unitree_Python_sdk.py
src/: python_interface_high_cmd.cpp
